--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -485,6 +485,16 @@ body {
     margin-bottom: 0px;
   }
 }
+.what_we_do .partner_overlay .card_row {
+  flex-wrap: nowrap;
+  overflow-x: auto;
+}
+@media only screen and (min-width: 992px) {
+  .what_we_do .partner_overlay .card_row {
+    flex-wrap: wrap;
+    overflow-x: unset;
+  }
+}
 .what_we_do .partner_overlay .card {
   background-color: rgba(23, 36, 93, 0.811);
   color: #ffffff;
@@ -760,11 +770,9 @@ body {
 .statics_section .row .bannar_text {
   padding-bottom: 40px;
 }
-@media only screen and (min-width: 768px) {
-  .statics_section .counter_row {
-    flex-wrap: nowrap;
-    overflow-x: auto;
-  }
+.statics_section .counter_row {
+  flex-wrap: nowrap;
+  overflow-x: auto;
 }
 @media only screen and (min-width: 992px) {
   .statics_section .counter_row {
@@ -836,11 +844,15 @@ body {
 .what_we_offer .card .card-body {
   text-align: center;
   position: relative;
+  height: 100%;
 }
 .what_we_offer .card .card-body .bannar_btn {
   position: absolute;
-  bottom: -50px;
-  left: 70px;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: auto;
+  margin-bottom: -60px;
 }
 .what_we_offer .card .card-title {
   margin: auto;
@@ -1167,6 +1179,9 @@ footer .foote_overlay .sing_up_newsletter .bannar_text {
 footer .foote_overlay .sing_up_newsletter .input_checkbox {
   display: flex;
 }
+footer .foote_overlay .sing_up_newsletter .input_checkbox input {
+  margin-top: 1px;
+}
 footer .foote_overlay .social_icons_footer a {
   color: #ffffff;
   font-size: 15px;
@@ -1492,14 +1507,20 @@ footer .footer_ending .container .bannar_text {
   margin: 0px auto;
   padding: 0px;
 }
+.blog_single_page .row {
+  position: relative;
+}
 .blog_single_page .blog_heding {
   margin: 0px;
-  padding: 0px;
+  padding: 0px 0 0 10px;
   font-size: 28px;
   font-family: "Roboto";
   color: #ffffff;
   line-height: 1.3;
-  text-align: center;
+  text-align: start;
+  position: absolute;
+  top: 100px;
+  z-index: 111;
 }
 @media only screen and (min-width: 768px) {
   .blog_single_page .blog_heding {
@@ -1517,7 +1538,7 @@ footer .footer_ending .container .bannar_text {
 }
 .blog_single_page .blog_image_with_text img {
   width: 100%;
-  opacity: 0.8;
+  opacity: 0.5;
   border-radius: 20px;
 }
 .blog_single_page .blog_image_with_text .text_over_image {
@@ -1527,9 +1548,7 @@ footer .footer_ending .container .bannar_text {
   font-family: "Roboto";
   color: #ffffff;
   line-height: 1.2;
-  position: absolute;
-  bottom: 50px;
-  left: 20px;
+  padding-top: 20px;
   width: 90%;
 }
 @media only screen and (min-width: 600px) {
@@ -1542,7 +1561,6 @@ footer .footer_ending .container .bannar_text {
     font-size: 28px;
     text-align: left;
     width: 60%;
-    left: 50px;
   }
 }
 .blog_single_page .blog_details_text {
