--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -504,9 +504,15 @@ $bold:600;
             }
         }
 
-        // .card_row {
-        //     justify-content: space-between;
-        // }
+        .card_row {
+            // justify-content: space-between;
+            flex-wrap: nowrap;
+            overflow-x: auto;            
+            @include minwidth(992px) {
+                flex-wrap: wrap;
+                overflow-x: unset;
+            }
+        }
 
         .card {
             background-color: $card_color;
@@ -808,12 +814,9 @@ $bold:600;
         }
     }
     // statics counter css start
-    .counter_row {
-        @include minwidth(768px) {
+    .counter_row {        
             flex-wrap: nowrap;
             overflow-x: auto;
-        }
-
         @include minwidth(992px) {
             flex-wrap: wrap;
         }
@@ -883,11 +886,14 @@ $bold:600;
         .card-body {
             text-align: center;
             position: relative;
-
+            height: 100%;
             .bannar_btn {
                 position: absolute;
-                bottom: -50px;
-                left: 70px;
+                bottom: 20px;
+                left: 50%;
+                transform: translateX(-50%);
+                margin-top: auto;
+                margin-bottom: -60px;
             }
         }
 
@@ -1248,6 +1254,9 @@ footer {
 
             .input_checkbox {
                 display: flex;
+                input{
+                    margin-top: 1px;
+                }
             }
         }
         .social_icons_footer {
@@ -1633,14 +1642,20 @@ footer {
         margin: 0px auto;
         padding: 0px;
     }
+    .row{
+        position: relative;
+    }
     .blog_heding{    
         margin: 0px;
-        padding: 0px;
+        padding: 0px 0 0 10px;
         font-size: 28px;
         font-family: 'Roboto';
         color: $font_primary_color;
         line-height: 1.3;
-        text-align: center;
+        text-align: start;
+        position: absolute;
+        top: 100px;
+        z-index: 111;
         @include minwidth(768px) {
             font-size: 35px;
         }
@@ -1654,7 +1669,7 @@ footer {
         padding: 30px 0px;   
         img{
             width: 100%;
-            opacity: .8;
+            opacity: .5;
             border-radius: 20px;
         }  
         .text_over_image{
@@ -1664,9 +1679,10 @@ footer {
             font-family: 'Roboto';
             color: $font_primary_color;
             line-height: 1.2;        
-            position: absolute;
-           bottom: 50px;
-            left: 20px;
+            // position: absolute;
+        //    bottom: 50px;
+        //     left: 20px;
+        padding-top: 20px;
             width: 90%;
             @include minwidth(600px) {
                 font-size: 22px;               
@@ -1675,7 +1691,7 @@ footer {
                 font-size: 28px;
                 text-align: left;
                 width: 60%;
-                left: 50px;
+                // left: 50px;
             }
         }
     }
