--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,7 +40,7 @@ $heading_color : #0cd3f0;
 }
 .dark_theme{
     --primary-color: black;
---secondary-color: black;
+--secondary-color: rgba(0, 0, 0, 0.827);
 --third-color: black;
 }
 // $primary_section_color:rgba(11, 24, 93, 0.762);
@@ -165,12 +165,13 @@ $bold:600;
    .for_darkmood{
         position: relative;
         #moon_png{
-            width: 40px;
+            width: 25px;
             cursor:pointer;
             position: absolute;
             left: 80px;
-            top: -20px;
-            @include minwidth(768px) {      
+            top: -12px;
+            @include minwidth(768px) {     
+                width: 40px; 
                 left: 20px;
                 top: -20px;
             }
@@ -408,6 +409,18 @@ $bold:600;
                 display: initial;
             }
         }
+        .slick-prev{
+            left: -11px;
+            @include minwidth(600px) {
+                left: -15px;
+            }
+        }
+        .slick-next{
+            right: -11px;
+            @include minwidth(600px) {
+                right: -15px;
+            }
+        }
     }
 }
 .partner_heding {
@@ -633,6 +646,9 @@ $bold:600;
         max-width: 1530px;
         margin-left: auto;
         margin-right: 0px;
+        @include minwidth(1921px) {
+           margin-right: auto;
+        }
 
         .row {
             max-width: 100%;
@@ -987,6 +1003,7 @@ $bold:600;
         position: relative;
 
         .card-body {
+            padding: 5px;
             img {
                 opacity: .6;
             }
@@ -995,7 +1012,7 @@ $bold:600;
         .card-bdy_content {
             position: absolute;
             bottom: 30px;
-            left: 25px;
+            left: 20px;
             padding: 10px;
         }
 
@@ -1051,6 +1068,13 @@ $bold:600;
     .news_slidr_box {
         border-radius: 10px;
     }
+    .slick-prev{
+        left: -1px;
+    }
+    .slick-next{
+        right: -1px;
+    }
+
 }
 
 // our news css end
@@ -1152,9 +1176,13 @@ $bold:600;
             color: $font_primary_color;
             transition: .5s;          
                 // padding: 13px 30px;
+                width: 120px;
+                height: 40px;
+             border:0px;     
+             @include minwidth(768px) {
                 width: 180px;
                 height: 60px;
-             border:0px;           
+            }      
 
             &:hover {
                 background-color: #0ad3ef;
