--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,13 +22,13 @@ body {
 
 :root {
   --primary-color: rgba(11, 24, 93, 0.762);
-  --secondary-color: rgba(9, 22, 80, 0.694);
+  --secondary-color: rgba(9, 22, 80, 0.623);
   --third-color: rgb(9, 22, 80);
 }
 
 .dark_theme {
   --primary-color: black;
-  --secondary-color: rgba(0, 0, 0, 0.827);
+  --secondary-color: rgba(0, 0, 0, 0.711);
   --third-color: black;
 }
 
@@ -166,14 +166,66 @@ body {
   width: 25px;
   cursor: pointer;
   position: absolute;
-  left: 80px;
+  left: 90px;
   top: -12px;
+}
+@media only screen and (min-width: 440px) {
+  .for_darkmood #moon_png {
+    left: 220px;
+    top: -12px;
+  }
+}
+@media only screen and (min-width: 480px) {
+  .for_darkmood #moon_png {
+    left: 250px;
+    top: -12px;
+  }
+}
+@media only screen and (min-width: 530px) {
+  .for_darkmood #moon_png {
+    left: 300px;
+    top: -12px;
+  }
 }
 @media only screen and (min-width: 768px) {
   .for_darkmood #moon_png {
     width: 40px;
-    left: 20px;
-    top: -20px;
+    left: 560px;
+    top: -1px;
+  }
+}
+@media only screen and (min-width: 920px) {
+  .for_darkmood #moon_png {
+    width: 40px;
+    left: 630px;
+    top: -1px;
+  }
+}
+@media only screen and (min-width: 1000px) {
+  .for_darkmood #moon_png {
+    width: 40px;
+    left: 750px;
+    top: -1px;
+  }
+}
+@media only screen and (min-width: 1100x) {
+  .for_darkmood #moon_png {
+    width: 40px;
+    left: 800px;
+    top: -1px;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .for_darkmood #moon_png {
+    width: 40px;
+    left: 900px;
+    top: -10px;
+  }
+}
+@media only screen and (min-width: 1240px) {
+  .for_darkmood #moon_png {
+    left: 950px;
+    top: -10px;
   }
 }
 
@@ -1477,11 +1529,6 @@ footer .footer_ending .container .bannar_text {
   border-radius: 10px;
   opacity: 0.8;
 }
-.our_team .our_team_info {
-  position: absolute;
-  bottom: 10px;
-  left: 30px;
-}
 .our_team .our_team_info .our_team_heading {
   font-size: 18px;
   font-family: "Roboto";
@@ -1591,14 +1638,41 @@ footer .footer_ending .container .bannar_text {
   font-weight: 400;
 }
 
-.our_blog .col-md-4 {
+.our_blog .col-md-8 .wer_working_with {
+  text-align: left;
+  width: 100%;
+  padding-left: 20px;
+  padding-bottom: 0px;
+}
+.our_blog .col-md-8 .abut_text {
+  text-align: left;
+  width: 100%;
+  padding-left: 20px;
+}
+.our_blog .col-md-6 {
+  width: 100%;
+  position: relative;
   margin-bottom: 30px;
 }
-.our_blog .col-md-4:hover {
-  opacity: 0.7;
-}
-.our_blog .col-md-4 a img {
+.our_blog .col-md-6 a img {
   width: 98%;
+  opacity: 0.8;
+}
+.our_blog .col-md-6 a img:hover {
+  opacity: 0.5;
+}
+@media only screen and (min-width: 992px) {
+  .our_blog .col-md-6 {
+    width: 50%;
+  }
+}
+.our_blog .col-md-6 .our_team_info {
+  position: absolute;
+  bottom: 10px;
+  left: 30px;
+  z-index: 2;
+  text-align: start;
+  width: 80%;
 }
 .our_blog .row .card-link {
   color: #0ad3ef;
@@ -1607,16 +1681,231 @@ footer .footer_ending .container .bannar_text {
 .our_blog .row .card-link i {
   font-size: 12px;
 }
+.our_blog .blog_side_bar {
+  margin-top: 40px;
+  width: 100%;
+  margin: 20px auto;
+}
+@media only screen and (min-width: 768px) {
+  .our_blog .blog_side_bar {
+    width: 25.5%;
+    margin-left: 10px;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .our_blog .blog_side_bar {
+    width: 30.5%;
+    margin-left: 30px;
+  }
+}
+.our_blog .blog_side_bar .latest_tweets {
+  border-top: 2px solid #0ad3ef;
+  border-bottom: 2px solid #0ad3ef;
+  padding-bottom: 20px;
+}
+.our_blog .blog_side_bar .latest_tweets .latest_tweets_heding {
+  font-size: 28px;
+  font-family: "Roboto";
+  color: #bfc8e9;
+  line-height: 1.3;
+  text-align: start;
+  margin: 0px 0 10px 0px;
+  padding: 20px 0 0 20px;
+}
+@media only screen and (min-width: 768px) {
+  .our_blog .blog_side_bar .latest_tweets .latest_tweets_heding {
+    font-size: 18px;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .our_blog .blog_side_bar .latest_tweets .latest_tweets_heding {
+    font-size: 28px;
+  }
+}
+.our_blog .blog_side_bar .latest_tweets .latest_tweet_box {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: rgba(23, 36, 93, 0.811);
+  padding-top: 30px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  width: 100%;
+  box-shadow: 0px 0px 4px 3px var(--third-color);
+  padding-bottom: 20px;
+  width: 100%;
+}
+@media only screen and (min-width: 768px) {
+  .our_blog .blog_side_bar .latest_tweets .latest_tweet_box {
+    padding: 5px;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .our_blog .blog_side_bar .latest_tweets .latest_tweet_box {
+    padding-top: 30px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+  }
+}
+.our_blog .blog_side_bar .latest_tweets .latest_tweet_icone {
+  font-size: 15px;
+  color: #bfc8e9;
+  width: 10%;
+}
+@media only screen and (min-width: 992px) {
+  .our_blog .blog_side_bar .latest_tweets .latest_tweet_icone {
+    font-size: 20px;
+  }
+}
+.our_blog .blog_side_bar .latest_tweets .latest_tweet_description {
+  width: 90%;
+  padding-left: 10px;
+}
+@media only screen and (min-width: 992px) {
+  .our_blog .blog_side_bar .latest_tweets .latest_tweet_description {
+    padding-left: 20px;
+  }
+}
+.our_blog .blog_side_bar .latest_tweets .latest_tweet_description a {
+  text-align: start;
+  color: #0ad3ef;
+  display: inline-block;
+  width: 100%;
+}
+.our_blog .blog_side_bar .latest_tweets a, .our_blog .blog_side_bar .latest_tweets .latest_tweet_para {
+  font-size: 14px;
+  font-family: "Roboto";
+  color: #bfc8e9;
+  line-height: 1.3;
+  text-align: start;
+  margin: 0px;
+  padding: 0px;
+  text-decoration: none;
+}
+@media only screen and (min-width: 992px) {
+  .our_blog .blog_side_bar .latest_tweets a, .our_blog .blog_side_bar .latest_tweets .latest_tweet_para {
+    font-size: 16px;
+  }
+}
+.our_blog .blog_side_bar .popular_posts {
+  border-top: 0px;
+}
+.our_blog .blog_side_bar .popular_posts .latest_tweet_icone {
+  width: 30%;
+}
+@media only screen and (min-width: 768px) {
+  .our_blog .blog_side_bar .popular_posts .latest_tweet_icone {
+    width: 100%;
+    padding-bottom: 10px;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .our_blog .blog_side_bar .popular_posts .latest_tweet_icone {
+    width: 30%;
+    padding-bottom: 0px;
+  }
+}
+.our_blog .blog_side_bar .popular_posts .latest_tweet_description {
+  width: 70%;
+}
+@media only screen and (min-width: 768px) {
+  .our_blog .blog_side_bar .popular_posts .latest_tweet_description {
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .our_blog .blog_side_bar .popular_posts .latest_tweet_description {
+    width: 70%;
+  }
+}
+.our_blog .blog_side_bar .popular_posts .latest_tweet_description .latest_news_comment {
+  display: flex;
+  padding-top: 10px;
+}
+.our_blog .blog_side_bar .popular_posts .latest_tweet_description .latest_news_comment .latest_tweet_para {
+  margin: 0px;
+}
+.our_blog .blog_side_bar .popular_posts .latest_tweet_description .latest_news_comment i {
+  color: #0ad3ef;
+  font-size: 18px;
+  padding-right: 10px;
+}
+.our_blog .blog_side_bar .popular_posts .latest_tweet_box {
+  align-items: center;
+  padding-bottom: 20px;
+}
+@media only screen and (min-width: 768px) {
+  .our_blog .blog_side_bar .popular_posts .latest_tweet_box {
+    display: block;
+    text-align: center;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .our_blog .blog_side_bar .popular_posts .latest_tweet_box {
+    display: flex;
+  }
+}
+.our_blog .blog_side_bar .categories {
+  border-top: 0px;
+}
+.our_blog .blog_side_bar .categories .latest_tweet_description {
+  box-shadow: 0px 0px 10px 2px var(--third-color);
+  padding: 10px;
+}
+.our_blog .blog_side_bar .tages {
+  border-top: 0px;
+}
+.our_blog .blog_side_bar .tages .latest_tweet_box {
+  display: inline-block;
+  max-width: 60px;
+  text-align: center;
+  padding: 10px;
+  border-radius: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+.our_blog .blog_side_bar .side_bar_search {
+  border: 0px;
+}
+.our_blog .blog_side_bar .side_bar_search .tag_box {
+  box-shadow: 0px 0px 10px 2px var(--third-color);
+  text-align: left;
+}
+.our_blog .blog_side_bar .side_bar_search .tag_box a {
+  position: relative;
+}
+.our_blog .blog_side_bar .side_bar_search .tag_box a i {
+  position: absolute;
+  font-size: 25px;
+  color: #ffffff;
+  right: 10px;
+  top: 1px;
+}
+.our_blog .blog_side_bar .side_bar_search input {
+  background-color: rgba(23, 36, 93, 0.811);
+  width: 100%;
+  padding: 15px 10px;
+}
+.our_blog .blog_side_bar .side_bar_search input::-moz-placeholder {
+  font-size: 20px;
+  color: #bfc8e9;
+}
+.our_blog .blog_side_bar .side_bar_search input::placeholder {
+  font-size: 20px;
+  color: #bfc8e9;
+}
 
 .blog_single_page {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.blog_single_page .blog_single_overlay {
   padding: 50px 0px;
+  background-color: var(--secondary-color);
 }
 .blog_single_page .container {
   margin: 0px auto;
   padding: 0px;
-}
-.blog_single_page .row {
-  position: relative;
 }
 .blog_single_page .blog_heding {
   margin: 0px;
@@ -1626,9 +1915,6 @@ footer .footer_ending .container .bannar_text {
   color: #ffffff;
   line-height: 1.3;
   text-align: start;
-  position: absolute;
-  top: 100px;
-  z-index: 111;
 }
 @media only screen and (min-width: 768px) {
   .blog_single_page .blog_heding {
