--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -35,12 +35,12 @@ $heading_color : #0cd3f0;
 // section 
 :root{
 --primary-color: rgba(11, 24, 93, 0.762);
---secondary-color:  rgba(9, 22, 80, 0.694);
+--secondary-color:  rgba(9, 22, 80, 0.623);
 --third-color: rgb(9, 22, 80);
 }
 .dark_theme{
     --primary-color: black;
---secondary-color: rgba(0, 0, 0, 0.827);
+--secondary-color: rgba(0, 0, 0, 0.711);
 --third-color: black;
 }
 // $primary_section_color:rgba(11, 24, 93, 0.762);
@@ -168,21 +168,55 @@ $bold:600;
             width: 25px;
             cursor:pointer;
             position: absolute;
-            left: 80px;
+            left: 90px;
             top: -12px;
+            @include minwidth(440px) {                  
+                left: 220px;
+            top: -12px;
+            }   
+            @include minwidth(480px) {                  
+                left: 250px;
+                top: -12px;
+            }   
+            @include minwidth(530px) {                  
+                left: 300px;
+                top: -12px;
+            }   
             @include minwidth(768px) {     
                 width: 40px; 
-                left: 20px;
-                top: -20px;
-            }
-         
+                left: 560px;
+                top: -1px;
+            }   
+            @include minwidth(920px) {     
+                width: 40px; 
+                left: 630px;
+                top: -1px;
+            }   
+            @include minwidth(1000px) {     
+                width: 40px; 
+                left: 750px;
+                top: -1px;
+            }   
+            @include minwidth(1100x) {     
+                width: 40px; 
+                left: 800px;
+                top: -1px;
+            }   
+            @include minwidth(1200px) {     
+                width: 40px; 
+                left: 900px;
+                top: -10px;
+            }   
+            @include minwidth(1240px) {                 
+             left: 950px;
+                top: -10px;
+            }       
         }
     }
 
 .header_menu ul li:hover {
     background-color: #0ad3ef;
 }
-
 .sub_menu_parent {
     position: relative;
 
@@ -1042,8 +1076,7 @@ $bold:600;
             @include minwidth(992px) {
                 font-size: 25px;
             }
-        }
-    
+        }    
     }
     .card-link {
         font-size: 16px;
@@ -1602,9 +1635,9 @@ footer {
     }
 
     .our_team_info {
-        position: absolute;
-        bottom: 10px;
-        left: 30px;
+        // position: absolute;
+        // bottom: 10px;
+        // left: 30px;
 
         .our_team_heading {
             font-size: 18px;
@@ -1725,15 +1758,44 @@ footer {
 // our_team Page css end
 // blog page css start
 .our_blog{
-    .col-md-4{  
-        &:hover{
-            opacity: .7;
-        }
-       a img{
-            width: 98%
-        }
-        margin-bottom: 30px;
+.col-md-8{
+     .wer_working_with{
+        text-align: left;
+        width: 100%;
+        padding-left: 20px;
+        padding-bottom: 0px;
+     }
+     .abut_text{
+        text-align: left;
+        width: 100%;
+        padding-left: 20px;;
+     }
     }
+    .col-md-6{  
+        width: 100%;
+        position: relative;
+   
+       a img{
+            width: 98%;
+            opacity: .8;
+            &:hover{
+                opacity: .5;
+            }
+        }
+        margin-bottom: 30px;            
+        @include minwidth(992px) {
+      width: 50%;
+        }
+        .our_team_info {
+            position: absolute;
+            bottom: 10px;
+            left: 30px;    
+            z-index: 2;        
+            text-align: start;
+            width: 80%;      
+        }
+    }   
+
     .row .card-link{
         color: $button_hover_color;
         font-size: 14px;
@@ -1741,17 +1803,199 @@ footer {
             font-size: 12px;
         }
     }
+    .blog_side_bar{       
+        margin-top: 40px;
+        width: 100%;      
+        margin: 20px auto;         
+        @include minwidth(768px) {
+            width: 25.5%;               
+            margin-left: 10px;
+        }
+        @include minwidth(1200px) {
+            width: 30.5%;   
+            margin-left: 30px;
+        }
+        .latest_tweets{    
+            border-top: 2px solid $button_hover_color; 
+            border-bottom: 2px solid $button_hover_color; 
+            padding-bottom: 20px;
+            .latest_tweets_heding{         
+                font-size: 28px;
+                font-family: 'Roboto';
+                color: $font_secondary_color;
+                line-height: 1.3;
+                text-align: start;
+                margin: 0px 0 10px 0px;
+                padding: 20px 0 0 20px;
+                @include minwidth(768px) {             
+                    font-size: 18px;
+                }  
+                @include minwidth(992px) {
+                    font-size: 28px;
+                }  
+            }
+            .latest_tweet_box{
+                display: flex;
+                flex-wrap: wrap;
+                background-color: $card_color;
+                padding-top: 30px;
+                padding-bottom: 10px;
+                padding-left: 20px;
+                width: 100%;
+               box-shadow: 0px 0px 4px 3px var(--third-color);
+                padding-bottom: 20px;   
+                width: 100%;   
+                @include minwidth(768px) {
+                   padding: 5px;
+                }                  
+                @include minwidth(1200px) {
+                    padding-top: 30px;
+                    padding-bottom: 10px;
+                    padding-left: 20px;
+                }                  
+            }            
+            .latest_tweet_icone{
+                font-size: 15px;              
+                color: $font_secondary_color;    
+                width: 10%;   
+                @include minwidth(992px) {
+                    font-size: 20px;    
+                }                     
+            }
+            .latest_tweet_description{
+                width: 90%;
+                padding-left: 10px;   
+                @include minwidth(992px) {
+                    padding-left: 20px;  
+                }
+                a{
+                    text-align: start;
+                    color: $button_hover_color;
+                    display: inline-block;
+                    width: 100%;
+                }           
+             }
+            a, .latest_tweet_para{
+                font-size: 14px;
+                font-family: 'Roboto';
+                color: $font_secondary_color;
+                line-height: 1.3;
+                text-align: start;
+                margin: 0px;
+                padding: 0px;
+                text-decoration: none;
+                @include minwidth(992px) {
+                    font-size: 16px;
+                }
+            }
+        }  
+        .popular_posts{      
+            border-top: 0px;   
+            .latest_tweet_icone{
+                width: 30%;
+                @include minwidth(768px) {
+                    width: 100%;   
+                    padding-bottom: 10px;               
+                 }
+                @include minwidth(992px) {
+                    width: 30%;
+                    padding-bottom: 0px;
+                 }
+            }
+            .latest_tweet_description{
+                width: 70%;
+                @include minwidth(768px) {
+                    width: 100%;                  
+                 }
+                @include minwidth(992px) {
+                    width: 70%;
+                 }
+                .latest_news_comment{
+                    display: flex;
+                    padding-top: 10px;
+                    .latest_tweet_para{
+                        margin: 0px;
+                    //   padding-left: 10px;
+                    }
+                    i{
+                        color: $button_hover_color;
+                        font-size: 18px;
+                        padding-right: 10px;
+                    }
+                }
+            }
+            .latest_tweet_box{
+                align-items: center;
+                padding-bottom: 20px;
+                @include minwidth(768px) {
+                 display: block;
+                 text-align: center;
+                }
+                @include minwidth(992px) {
+                   display: flex;
+                }
+            }
+        } 
+        .categories{
+            border-top: 0px;
+            .latest_tweet_description{
+                box-shadow:0px 0px 10px 2px var(--third-color);
+                padding: 10px;
+            }
+        }
+        .tages{
+            border-top: 0px;      
+            .latest_tweet_box{
+                display: inline-block;
+                max-width: 60px;
+                text-align: center;
+                padding: 10px;
+                border-radius: 10px;
+                margin-right: 10px;
+                margin-bottom: 10px;
+            }
+        }
+        .side_bar_search{
+            border: 0px;
+            .tag_box{
+                box-shadow:0px 0px 10px 2px var(--third-color);
+                text-align: left;
+                a{
+                    position: relative;
+                    i{
+                        position: absolute;
+                        font-size: 25px;
+                        color: $font_primary_color;
+                        right: 10px;
+                        top: 1px;
+                    }
+                }               
+            }
+            input{
+                background-color: $card_color;
+                width: 100%;
+                padding: 15px 10px;
+            }
+            input::placeholder{
+            font-size: 20px;  
+            color: $font_secondary_color;    
+            }           
+        }
+    }
 }
 // blog page css end
 // blog single page css start
-.blog_single_page{
-    padding: 50px 0px;
+.blog_single_page{   
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    .blog_single_overlay{
+        padding: 50px 0px;  
+        background-color: var(--secondary-color);
+    }
     .container{
         margin: 0px auto;
-        padding: 0px;
-    }
-    .row{
-        position: relative;
+        padding: 0px;    
     }
     .blog_heding{    
         margin: 0px;
@@ -1760,10 +2004,7 @@ footer {
         font-family: 'Roboto';
         color: $font_primary_color;
         line-height: 1.3;
-        text-align: start;
-        position: absolute;
-        top: 100px;
-        z-index: 111;
+        text-align: start; 
         @include minwidth(768px) {
             font-size: 35px;
         }
